添加图片列表配置页面